template split read me

--- a/template-split/adaptation/templates/base.dust
+++ b/template-split/adaptation/templates/base.dust
@@ -20,6 +20,7 @@
                 (analytics.ua.q = analytics.ua.q || []).push(arguments);
             };
         </script>
+        {+splitAnalytic}{/splitAnalytic}
     {/head}
 </head>
 {body|openTag|s}
