--- a/template-split/adaptation/templates/home2.dust
+++ b/template-split/adaptation/templates/home2.dust
@@ -1,5 +1,12 @@
 {>"templates/base"/}
 
+{<splitAnalytic}
+    <script>
+        Mobify.analytics.ua('mobifyTracker.set', 'dimension5', '{variation}');
+        Mobify.analytics.ua('mobifyTracker.send', 'event', 'Mobify', 'SplitTest');
+    </script>
+{/splitAnalytic}
+
 {<contentBlock}
     <h1>HOME Version 2</h1>
     <p>We've also extracted the first paragraph from your site and placed it in home.dust:</p>
