--- a/template-split/adaptation/templates/home1.dust
+++ b/template-split/adaptation/templates/home1.dust
@@ -1,12 +1,5 @@
 {>"templates/base"/}
 
-{<splitAnalytic}
-    <script>
-        Mobify.analytics.ua('mobifyTracker.set', 'dimension5', '{variation}');
-        Mobify.analytics.ua('mobifyTracker.send', 'event', 'Mobify', 'SplitTest');
-    </script>
-{/splitAnalytic}
-
 {<contentBlock}
     <h1>HOME Version 1</h1>
     <p>We've also extracted the first paragraph from your site and placed it in home.dust:</p>
@@ -27,3 +20,11 @@
     </script>
 {/uiScripts}
 
+{<splitAnalytic}
+    <script>
+        (function($) {
+            Mobify.analytics.ua('mobifyTracker.set', 'dimension5', '{variation}');
+            Mobify.analytics.ua('mobifyTracker.send', 'event', 'Mobify', 'SplitTest');
+        })(Mobify);
+    </script>
+{/splitAnalytic}
