--- a/template-split/adaptation/templates/home2.dust
+++ b/template-split/adaptation/templates/home2.dust
@@ -21,10 +21,5 @@
 {/uiScripts}
 
 {<splitAnalytic}
-    <script>
-        (function($) {
-            Mobify.analytics.ua('mobifyTracker.set', 'dimension5', '{variation}');
-            Mobify.analytics.ua('mobifyTracker.send', 'event', 'Mobify', 'SplitTest');
-        })(Mobify);
-    </script>
+    {>"templates/partials/_splitAnalytic"/}
 {/splitAnalytic}
